# kb-tool

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  build-wheels  test.py
data/: entity.vocab  relation.vocab  sample.txt  toy.txt  train.txt
src/: graph.rs  lib.rs  main.rs  triple.rs
