[package]
name = "kb-tool"
version = "0.1.0"
authors = ["reiyw <reiyw.setuve@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.4.13"
structopt = "0.2.18"
counter = "0.4.3"
rayon = "1.1.0"
indexmap = "1.1.0"
rand = "0.7.0"
bimap = "0.4.0"
